--- a/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
+++ b/buildroot-external/rootfs-overlay/etc/usbmount/usbmount.conf
@@ -35,7 +35,7 @@ FILESYSTEMS="vfat ntfs fuseblk ext2 ext3 ext4 hfsplus exfat f2fs"
 #############################################################################
 # Mount options: Options passed to the mount command with the -o flag.
 # See the warning above regarding removing "sync" from the options.
-MOUNTOPTIONS="noexec,nodev,noatime,nodiratime,sync"
+MOUNTOPTIONS="noexec,nodev,noatime,nodiratime"
 
 # Filesystem type specific mount options: This variable contains a space
 # separated list of strings, each which the form "-fstype=TYPE,OPTIONS".
