--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
 # thinRoot Continious Integration Check Workflow
+# yamllint disable rule:truthy
+---
 name: CI Build
 
 on:
@@ -9,18 +11,30 @@ on:
     paths-ignore:
       - '**.md'
 
+# default read-only permission
+permissions:
+  contents: read
+
 jobs:
   linter:
     name: Linter Checks
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v2.3.4
+      uses: actions/checkout@v3
 
     - name: Check shell scripts
-      uses: ludeeus/action-shellcheck@1.1.0
-      #with:
-      #  ignore: buildroot-external/package/neoserver/pkg/mediola/neo_server buildroot-patches/0010-lib32-integration/buildroot/support/scripts buildroot-external/package/xe-guest-utilities
-      #env:
-      #  SHELLCHECK_OPTS: -e SC3010 -e SC3014 -e SC3057 -e SC3036 -e SC3028 -e SC3020
+      uses: ludeeus/action-shellcheck@2.0.0
+
+    - name: Check yaml files
+      uses: frenck/action-yamllint@v1.4
+
+    - name: Check markdown files
+      uses: avto-dev/markdown-lint@v1
+      with:
+        ignore: '**/node_modules/** **/codemirror/README.md'
+
+    - name: Check Package consistency
+      run: |
+        make check
