--- a/buildroot-external/configs/intelnuc_defconfig
+++ b/buildroot-external/configs/intelnuc_defconfig
@@ -24,7 +24,8 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.74"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.93"
+BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel-patches"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
