--- a/buildroot-external/package/qt-webengine-kiosk/Config.in
+++ b/buildroot-external/package/qt-webengine-kiosk/Config.in
@@ -1,4 +1,6 @@
 config BR2_PACKAGE_QT_WEBENGINE_KIOSK
 	bool "qt-webengine-kiosk"
+	select BR2_PACKAGE_QT5WEBENGINE
+	select BR2_PACKAGE_QT5MULTIMEDIA
 	help
 	  Simple Qt Webengine browser
