--- a/buildroot-external/package/xprintidle/Config.in
+++ b/buildroot-external/package/xprintidle/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_XPRINTIDLE
 	bool "xprintidle"
+	select BR2_PACKAGE_XLIB_LIBXSCRNSAVER
 	help
 	  a utility that queries the X server for the user's idle time
 	  and prints it to stdout
