--- a/buildroot-external/configs/intelnuc.config
+++ b/buildroot-external/configs/intelnuc.config
@@ -25,7 +25,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.6.21"
 BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/global.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/device-support.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/device-support-pci.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/security-x86_64.config $(BR2_EXTERNAL_EQ3_PATH)/kernel/6.6/security.config $(BR2_EXTERNAL_EQ3_PATH)/board/intelnuc/kernel.config"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/global.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/device-support.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/device-support-pci.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/security-x86_64.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/security.config $(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel.config"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
