--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -1,34 +1,28 @@
-BR2_x86_64=y
-BR2_x86_corei7=y
-BR2_TOOLCHAIN_BUILDROOT_CXX=y
+# Buildroot config settings
+BR2_CCACHE=y
 BR2_DL_DIR="$(TOPDIR)/../download"
-BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
-BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
+# BR2_ENABLE_LOCALE_PURGE is not set
+BR2_ENABLE_LTO=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_THINROOT_PATH)/patches"
+BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
+BR2_KERNEL_MIRROR="https://www.kernel.org/pub"
 BR2_TARGET_GENERIC_HOSTNAME="thinroot"
 BR2_TARGET_GENERIC_ISSUE="Welcome to thinRoot"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
-# BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty2"
 BR2_ENABLE_LOCALE_WHITELIST="C en_US de_DE"
 BR2_GENERATE_LOCALE="en_US de_DE"
 BR2_SYSTEM_ENABLE_NLS=y
 BR2_TARGET_LOCALTIME="Europe/Berlin"
-BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_THINROOT_PATH}/board/intelnuc/users_table.txt"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_THINROOT_PATH)/rootfs-overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.1.18"
-BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel-patches"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
+
+# Buildroot packages
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_THINROOT_PATH)/Busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
@@ -50,11 +44,7 @@ BR2_PACKAGE_MESA3D_DEMOS=y
 BR2_PACKAGE_FREERDP=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_CROCUS=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_I915=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_IRIS=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
-BR2_PACKAGE_MESA3D_VULKAN_DRIVER_INTEL=y
 BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
@@ -73,33 +63,18 @@ BR2_PACKAGE_XAPP_XRANDR=y
 BR2_PACKAGE_XAPP_XSETROOT=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
-BR2_PACKAGE_XDRIVER_XF86_VIDEO_INTEL=y
 BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
 BR2_PACKAGE_NODM=y
 BR2_PACKAGE_XDOTOOL=y
 BR2_PACKAGE_OPENBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
-BR2_PACKAGE_LINUX_FIRMWARE_I915=y
-BR2_PACKAGE_LINUX_FIRMWARE_RADEON=y
-BR2_PACKAGE_LINUX_FIRMWARE_IBT=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_9XXX=y
-BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_QUZ=y
-BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
 BR2_PACKAGE_ACPID=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
-BR2_PACKAGE_LIBDRM_RADEON=y
 BR2_PACKAGE_LIBUSB=y
 BR2_PACKAGE_LLVM_RTTI=y
-BR2_PACKAGE_BLUEZ5_UTILS=y
-BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
-BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
-BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DROPBEAR=y
@@ -111,7 +86,6 @@ BR2_PACKAGE_WGET=y
 BR2_PACKAGE_IRQBALANCE=y
 BR2_PACKAGE_TAR=y
 BR2_TARGET_ROOTFS_CPIO_LZ4=y
-BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_E2FSPROGS=y
